--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 MISTRAL_API_KEY=YOUR_KEY_HERE
 MISTRAL_MODEL=mistral-large-latest
 MISTRAL_TRANSCRIPTION_MODEL=voxtral-mini-latest
+ELEVENLABS_API_KEY=YOUR_KEY_HERE
+ELEVENLABS_MODEL_ID=eleven_flash_v2_5
+ELEVENLABS_VOICE_ID=zYcjlYFOd3taleS0gkk3
+ELEVENLABS_OUTPUT_FORMAT=mp3_22050_32
+ELEVENLABS_OPTIMIZE_STREAMING_LATENCY=4
