--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ ELEVENLABS_MODEL_ID=eleven_flash_v2_5
 ELEVENLABS_VOICE_ID=zYcjlYFOd3taleS0gkk3
 ELEVENLABS_OUTPUT_FORMAT=mp3_22050_32
 ELEVENLABS_OPTIMIZE_STREAMING_LATENCY=4
+HUGGINGFACE_API_TOKEN=YOUR_KEY_HERE
+HF_EMOTION_MODEL=r-f/wav2vec-english-speech-emotion-recognition
