--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,5 @@ ELEVENLABS_VOICE_ID=zYcjlYFOd3taleS0gkk3
 ELEVENLABS_OUTPUT_FORMAT=mp3_22050_32
 ELEVENLABS_OPTIMIZE_STREAMING_LATENCY=4
 HUGGINGFACE_API_TOKEN=YOUR_KEY_HERE
-HF_EMOTION_MODEL=r-f/wav2vec-english-speech-emotion-recognition
+HF_EMOTION_MODEL=firdhokk/speech-emotion-recognition-with-openai-whisper-large-v3
+HF_EMOTION_API_URL=
