feat: Introduce local emotion classification service and update Next.js to v16.

--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ ELEVENLABS_OPTIMIZE_STREAMING_LATENCY=4
 HUGGINGFACE_API_TOKEN=YOUR_KEY_HERE
 HF_EMOTION_MODEL=firdhokk/speech-emotion-recognition-with-openai-whisper-large-v3
 HF_EMOTION_API_URL=
+
+# Local GPU emotion service (services/emotion/serve.py).
+# When set, the HF Inference API is bypassed entirely — no HF token needed for emotion.
+EMOTION_LOCAL_URL=http://localhost:5050
