--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "14.2.35",
+    "next": "^16.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
@@ -19,7 +19,7 @@
     "@types/react-dom": "18.2.22",
     "autoprefixer": "10.4.19",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.2.35",
+    "eslint-config-next": "^16.1.6",
     "playwright": "^1.58.2",
     "postcss": "8.4.38",
     "tailwindcss": "3.4.4",
