--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ MISTRAL_TRANSCRIPTION_MODEL=voxtral-mini-latest
 ELEVENLABS_API_KEY=YOUR_KEY_HERE
 ELEVENLABS_MODEL_ID=eleven_flash_v2_5
 ELEVENLABS_VOICE_ID=zYcjlYFOd3taleS0gkk3
+ELEVENLABS_VOICE_ID_LEVEL_2=ocZQ262SsZb9RIxcQBOj
 ELEVENLABS_OUTPUT_FORMAT=mp3_22050_32
 ELEVENLABS_OPTIMIZE_STREAMING_LATENCY=4
 HUGGINGFACE_API_TOKEN=YOUR_KEY_HERE
