--- a/.env.example
+++ b/.env.example
@@ -14,3 +14,7 @@ HF_EMOTION_API_URL=
 # Local GPU emotion service (services/emotion/serve.py).
 # When set, the HF Inference API is bypassed entirely — no HF token needed for emotion.
 EMOTION_LOCAL_URL=http://localhost:5050
+
+# Test shortcut: when enabled, level 2 jumps to the Suica mini-game right after first player audio.
+# 1/true/yes/on => enabled, anything else => disabled.
+NEXT_PUBLIC_SUICA_MINIGAME_TEST_SKIP=1
