--- a/.env.example
+++ b/.env.example
@@ -7,13 +7,10 @@ ELEVENLABS_VOICE_ID=zYcjlYFOd3taleS0gkk3
 ELEVENLABS_VOICE_ID_LEVEL_2=ocZQ262SsZb9RIxcQBOj
 ELEVENLABS_OUTPUT_FORMAT=mp3_22050_32
 ELEVENLABS_OPTIMIZE_STREAMING_LATENCY=4
-HUGGINGFACE_API_TOKEN=YOUR_KEY_HERE
-HF_EMOTION_MODEL=r-f/wav2vec-english-speech-emotion-recognition
-HF_EMOTION_API_URL=
-
-# Local GPU emotion service (services/emotion/serve.py).
-# When set, the HF Inference API is bypassed entirely — no HF token needed for emotion.
-EMOTION_LOCAL_URL=http://localhost:5050
+GEMINI_API_KEY=YOUR_KEY_HERE
+# Optional override. Default:
+# gemini-2.5-flash
+GEMINI_EMOTION_MODEL=gemini-2.5-flash
 
 # Test shortcut: when enabled, level 2 jumps to the Suica mini-game right after first player audio.
 # 1/true/yes/on => enabled, anything else => disabled.
