--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@google/genai": "^1.43.0",
     "next": "^16.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
