--- a/.env.example
+++ b/.env.example
@@ -7,10 +7,8 @@ ELEVENLABS_VOICE_ID=zYcjlYFOd3taleS0gkk3
 ELEVENLABS_VOICE_ID_LEVEL_2=ocZQ262SsZb9RIxcQBOj
 ELEVENLABS_OUTPUT_FORMAT=mp3_22050_32
 ELEVENLABS_OPTIMIZE_STREAMING_LATENCY=4
-GEMINI_API_KEY=YOUR_KEY_HERE
-# Optional override. Default:
-# gemini-2.5-flash
-GEMINI_EMOTION_MODEL=gemini-2.5-flash
+EMOTION_LOCAL_URL=http://127.0.0.1:5050
+EMOTION_MODEL=speechbrain/emotion-recognition-wav2vec2-IEMOCAP
 
 # Test shortcut: when enabled, level 2 jumps to the Suica mini-game right after first player audio.
 # 1/true/yes/on => enabled, anything else => disabled.
